# cloud-yolo

./: CMakeLists.txt
app/: test.cpp
include/: YoloV5.h
src/: YoloV5.cpp
